--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   provider: ^4.3.2+2
   rflutter_alert: ^1.1.0
   shimmer: ^1.1.2
+  introduction_screen: ^1.0.9
+  shared_preferences: ^0.5.12+4
+
 
 dev_dependencies:
   flutter_test:
@@ -53,9 +56,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/Illustrasi/
+     - assets/Icon/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
