--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,16 @@ dependencies:
   dio: ^3.0.10
   firebase_auth: ^0.18.3+1
   firebase_core: ^0.5.2+1
+  flutter_map: ^0.10.1+1
   flutter_mobx: ^1.1.0+2
   fluttertoast: ^7.1.1
+  geolocator: ^6.1.9
+  image_picker: ^0.6.7+14
   intl: ^0.16.1
   mobx: ^1.2.1+4
   mobx_codegen: ^1.1.2
+  path: ^1.7.0
+  path_provider: ^1.6.24
   progress_dialog: ^1.2.4
   provider: ^4.3.2+2
   rflutter_alert: ^1.1.0
