--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_datetime_picker: ^1.4.0
   introduction_screen: ^1.0.9
   shared_preferences: ^0.5.12+4
+  firebase_storage: ^5.1.0
 
 
 dev_dependencies:
