--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_progress_hud: ^1.0.2
   flutter_open_whatsapp: ^0.1.2
   flutter_rating_bar: ^3.2.0+1
+  url_launcher: ^5.7.10
 
 
 dev_dependencies:
