--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_open_whatsapp: ^0.1.2
   flutter_rating_bar: ^3.2.0+1
   url_launcher: ^5.7.10
+  cached_network_image: ^2.5.0
 
 
 dev_dependencies:
