--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="gimeal"
+        android:label="DonasiYuk!"
         android:icon="@mipmap/launcher_icon">
         android:requestLegacyExternalStorage="true"
         <activity
